--- a/app/theme/app.core.scss
+++ b/app/theme/app.core.scss
@@ -8,3 +8,4 @@
 // App Shared Sass variables belong in app.variables.scss.
 
 @import "../pages/home/home";
+@import "../pages/message-map/message-map";
