--- a/app/pages/message-map/message-map.scss
+++ b/app/pages/message-map/message-map.scss
@@ -10,3 +10,13 @@
   width: 100%;
   height: 100%;
 }
+
+.box {
+  background: white;
+  position: absolute;
+  width: 90%;
+  left: 5%;
+  top: 5%;
+  box-shadow: 5px 6px 14px -5px;
+  z-index: 9999;
+}
